fixed update product logic and added swagger for this with required param product id
