# cmd/docs/swagger.yaml
@@ -180,4 +180,39 @@ paths:
       summary: Create a new product
       tags:
       - Products
+  /products/update/id:
+    post:
+      consumes:
+      - application/json
+      description: update a product
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Product data
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProductDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: update a product
+      tags:
+      - Products
 swagger: "2.0"
