# internal/product/handler/product_handler.go
@@ -2,18 +2,19 @@ package handler
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/sohibjon7731/ecommerce_backend/internal/product/dto"
 	"github.com/sohibjon7731/ecommerce_backend/internal/product/service"
 )
 
-type ProductHandler struct{
+type ProductHandler struct {
 	Service service.ProductService
 }
 
-func NewProductHandler() *ProductHandler{
-	service:= service.NewProductService()
+func NewProductHandler() *ProductHandler {
+	service := service.NewProductService()
 	return &ProductHandler{Service: *service}
 }
 
@@ -28,23 +29,23 @@ func NewProductHandler() *ProductHandler{
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Router /products/create [post]
-func (h *ProductHandler) Create(c *gin.Context){
+func (h *ProductHandler) Create(c *gin.Context) {
 	var input dto.ProductDTO
-	if err:= c.ShouldBindJSON(&input); err!=nil{
+	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
-			"error":"invalid input",
+			"error": "invalid input",
 		})
 		return
 	}
-	err:= h.Service.Create(input.Title, input.Description, input.Price, input.Image, )
+	err := h.Service.Create(input.Title, input.Description, input.Price, input.Image)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
-			"error":err.Error(),
+			"error": err.Error(),
 		})
 		return
 	}
 	c.JSON(http.StatusCreated, gin.H{
-		"message":"product created successfuly",
+		"message": "product created successfuly",
 	})
 }
 
@@ -58,15 +59,55 @@ func (h *ProductHandler) Create(c *gin.Context){
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Router /products [get]
-func (h *ProductHandler) GetAllProducts(c *gin.Context){
-	products, err:= h.Service.GetAllProducts()
+func (h *ProductHandler) GetAllProducts(c *gin.Context) {
+	products, err := h.Service.GetAllProducts()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
-			"error":err.Error(),
+			"error": err.Error(),
 		})
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{
-		"products":dto.ConvertToProductResponseDTOs(products),
+		"products": dto.ConvertToProductResponseDTOs(products),
 	})
+}
+
+
+// UpdateProduct godoc
+// @Summary update a product
+// @Description update a product
+// @Tags Products
+// @Accept json
+// @Produce json
+// @Param id path int true "Product ID" 
+// @Param product body dto.ProductDTO true "Product data"
+// @Success 201 {object} dto.SuccessResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /products/update/id [post]
+func (h *ProductHandler) UpdateProduct(c *gin.Context) {
+	idParam := c.Param("id")
+	id, err := strconv.ParseUint(idParam, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": "Invalid Product ID",
+		})
+		return
+	}
+	var productDTO dto.ProductDTO
+	if err := c.ShouldBindJSON(&productDTO); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": "Invalid request body",
+		})
+		return
+	}
+	updatedProduct, err := h.Service.UpdateProduct(id, productDTO)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusCreated, updatedProduct)
 }
